- added endpoint to view the user
